# ReportBuilder

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  Report.html  linkedin-post.md  middleware.ts  next.config.js  package-lock.json  package.json  profiling-data.03-03-2026.15-20-13.json  profiling-data.03-03-2026.15-38-19.json  sample_test_results.json  tailwind.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/plans/: template-export-engine-implementation.md
.github/workflows/: release-rust-cli.yml
app/: globals-marketing.css  globals.css  layout.tsx
app/(app)/: layout.tsx
app/(auth)/: layout.tsx
app/(marketing)/: layout.tsx  page.tsx
app/actions/: assets.ts  auth.ts
components/: ErrorBoundary.tsx
components/app/: sidebar.tsx
components/auth/: forgot-password-form.tsx  login-form.tsx  reset-password-form.tsx  signup-form.tsx
docs/: labview-json-schema.md
lib/: example.test.ts
plans/: additional-components-design.md  codebase-analysis-improvements.md  json-data-integration-plan.md  licensing-approaches.md  marketing-page-redesign.md  multi-page-navigation-design.md  new-components-design.md  offline-report-approaches.md  open-source-migration.md  phase1-implementation-tickets.md  phase2-implementation-tickets.md  phase3-implementation-plan.md  remotion-video-plan.md
remotion/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
report-cli/: .gitignore  Cargo.toml  README.md
report-cli/src/: main.rs
sample-data/: component-test-sample.json
tools/: README.md  generate-pdf.bat
types/: database.ts
(+251 files in other folders)
