[package]
name = "report-cli"
version = "0.1.0"
edition = "2021"
authors = ["LabVIEW Report Builder"]
description = "CLI tool to generate PDF reports from HTML templates and JSON data"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
headless_chrome = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols
